# keycard-access

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  TODO-sdkconfig.defaults  sdkconfig-gate.defaults  sdkconfig-keymaker.defaults  sdkconfig.defaults
components/libka/: CMakeLists.txt  Kconfig  TODO-library.json  idf_component.yml
components/libka/include/ka/: data.hpp  gate.hpp  key_pair.hpp  keymaker.hpp  member_token.hpp  ota.hpp  p2p_ops.hpp  wifi.hpp
components/libka/src/ka/: device.cpp  gate.cpp  gpio_auth_responder.cpp  http.cpp  keymaker.cpp  member_token.cpp  ota.cpp  p2p_ops.cpp  rpc.cpp  secure_p2p.cpp  wifi.cpp
components/libmodernjson/: TODO-json.hpp
components/libsemver/: CMakeLists.txt  TODO-library.json
docs/: whitepaper.md
keycard-access/: CMakeLists.txt  custom_project_name.py  ensure_partitions.py  partitions.csv  partitions.py  partitions_ut.csv  platformio.ini  sdkconfig.defaults  set_version.py
keycard-access/components/: libsodium
keycard-access/lib/: libSpookyAction  libneon
keycard-access/src/: config.cpp  config.hpp  formatter_main.cpp  formatter_main.hpp  gate.cpp  gate.hpp  gate_main.cpp  (+8 more)
main/: CMakeLists.txt  Kconfig  main.cpp
misc/: gen-compiledb.py
tests/: CMakeLists.txt  partitions.csv  pytest_gcov.py  pytest_main.py  sdkconfig.defaults  test_basic.cpp  test_basic.hpp  test_card.cpp  test_main.cpp  test_p2p.cpp
tests/main/: CMakeLists.txt  Kconfig  main.cpp  test_basic.cpp  test_bundle.hpp  test_card.cpp  test_p2p.cpp
tests/main/include/: test_basic.hpp
tests/main/src/: test_basic.cpp  test_card.cpp  test_main.cpp  test_p2p.cpp
(+69 files in other folders)
